--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 
     implementation("io.javalin:javalin:2.4.0")
 
-    implementation("org.eclipse.leshan:leshan-client-cf:1.0.0-M10")
+    implementation("org.eclipse.leshan:leshan-client-cf:1.2.0")
+    implementation("javax.xml.ws:jaxws-api:2.3.1")
 
     implementation("com.fasterxml.jackson.core:jackson-databind:2.9.7")
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.7")
