--- a/front/angular.json
+++ b/front/angular.json
@@ -54,7 +54,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "front:build"
+            "browserTarget": "front:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
