--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "build": "ng build --configuration=production --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prettier": "prettier --write \"src/app/**/*\""
   },
   "private": true,
   "dependencies": {
@@ -41,6 +42,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
