--- a/build.gradle
+++ b/build.gradle
@@ -17,25 +17,25 @@ repositories {
 }
 
 dependencies {
-    implementation("org.slf4j:slf4j-api:1.7.25")
+    implementation("org.slf4j:slf4j-api:1.7.30")
     runtimeOnly("ch.qos.logback:logback-classic:1.2.3")
 
     implementation("io.javalin:javalin:2.4.0")
 
-    implementation("org.eclipse.leshan:leshan-client-cf:1.2.0")
+    implementation("org.eclipse.leshan:leshan-client-cf:1.3.1")
     implementation("javax.xml.ws:jaxws-api:2.3.1")
 
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.9.7")
-    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.7")
-    implementation("com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.7")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.7")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.7")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.12.2")
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.12.2")
+    implementation("com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.2")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.12.2")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.2")
 
-    implementation("io.github.malczuuu.problem4j:problem4j-jackson:1.0.1")
+    implementation("io.github.malczuuu.problem4j:problem4j-jackson:2.0.0")
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.3.1")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.3.1")
-    testImplementation("org.mockito:mockito-all:1.10.19")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
+    testImplementation("org.mockito:mockito-core:3.8.0")
 }
 
 test {
