--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front",
-  "version": "1.2.0-SNAPSHOT",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
