--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = "io.github.malczuuu"
-version = "1.0.0"
+version = "1.0.0-SNAPSHOT"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
