--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,46 @@
-/.gradle/
-/build/
-/.idea/
-/out/
-*.class
-/*.iml
+# ==============================
+#    Java App
 
-# Front
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+/buildSrc/.kotlin
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+# ==============================
+#    WebApp
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
