--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -8,7 +8,7 @@
     "sourceMap": true,
     "declaration": false,
     "module": "es2015",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "ES2022",
