--- a/.github/workflows/webapp-build.yml
+++ b/.github/workflows/webapp-build.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          cache-dependency-path: "taskbook-frontend/package-lock.json"
+          cache-dependency-path: "webapp/package-lock.json"
 
       - name: Install Dependencies
         run: npm ci
