--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "prettier": "prettier --write \"src/app/**/*\""
+    "prettier": "prettier --write \"src/app/**/*\"",
+    "prettierCheck": "prettier --check \"src/app/**/*\""
   },
   "private": true,
   "dependencies": {
@@ -25,7 +26,7 @@
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.6",
-    "prettier": "^2.2.1",
+    "prettier": "^3.7.4",
     "sass": "^1.97.1",
     "typescript": "~5.9.3",
     "vitest": "^4.0.8"
