--- a/.github/workflows/webapp-build.yml
+++ b/.github/workflows/webapp-build.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm ci
 
       - name: Check Prettier Formatting
-        run: npm run prettier -- --check
+        run: npm run prettierCheck
 
       - name: Build Project
         run: npm run build --if-present
